--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.solidalloy.extevents": "1.7.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.cinemachine": "2.8.9",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.render-pipelines.universal": "13.1.8",
